# test-rig

./: README.md  copying_from_payload.sh
disparity_camera/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
disparity_camera/action/: disparityAction.action
disparity_camera/include/disparity_camera/: common.h
disparity_camera/launch/: disparity_cpu.launch  disparity_gpu.launch
disparity_camera/src/: aggregation.cu  bova_sgm.cu  costs.cu  disparity_client_cpu.cpp  disparity_client_gpu.cpp  disparity_server_cpu.cpp  disparity_server_gpu.cpp  main.cpp
ethz_piksi_ros/piksi_multi_rtk_ros/cfg/: enu_origin_example.yaml  piksi_multi_driver_settings.yaml
ethz_piksi_ros/piksi_multi_rtk_ros/launch/: piksi_multi_rover.launch
ethz_piksi_ros/piksi_multi_rtk_ros/src/piksi_multi_rtk_ros/: piksi_multi.py
launchers/: .gitignore  CMakeLists.txt  package.xml
launchers/config/: autel_playback.rviz  autel_sensors.rviz  autel_vio.yaml  autel_vio_2 (copy).yaml  autel_vio_2.yaml  euroc.yaml  euroc_left.yaml  euroc_right.yaml  kitti.yaml  lidar_indoor.yaml  lidar_outdoor.yaml  mapping_cams_conf.yaml  rvizConfig.rviz  set_priority.sh
launchers/launch/: autel_sensors.launch  autel_sensors_demo.launch  base.launch  payload.launch  payload_sensors.launch  payload_sensors_home.launch  playback.launch  playback_hack.launch  playback_trajectory.launch  reconfigure_cameras.launch  record.launch  record_cams_imu_kalibr.launch  record_mapping_velodyne_imu.launch  record_output.launch  rectfication.launch  static_transforms.launch  urdf.launch  velodyne_home.launch  vio.launch
launchers/scripts/: monitor.py
launchers/src/: add_banner.py  euroc_camera_info_publisher.py  modify_euroc_bags.py  swap_camera_info.py
launchers/urdf/: test_rig.urdf
swiftnav_ros/launch/: swiftnav_ros.launch
swiftnav_ros/src/: swiftnav_ros_driver.cpp  swiftnav_ros_node.cpp
xsens_driver/launch/: xsens_driver.launch
xsens_driver/nodes/: mtnode.py
